external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_neg_unsigned_literal.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E04003]: built-in operation not supported
  ┌─ tests/development/signed_ints/signed_int_neg_unsigned_literal.move:7:19
  │
7 │         let _x = -1u8;
  │                   ^^^
  │                   │
  │                   Invalid argument to '-'
  │                   Found: 'u8'. But expected: 'i8', 'i16', 'i32', 'i64', 'i128'

error[E04003]: built-in operation not supported
   ┌─ tests/development/signed_ints/signed_int_neg_unsigned_literal.move:11:19
   │
11 │         let _x = -1u16;
   │                   ^^^^
   │                   │
   │                   Invalid argument to '-'
   │                   Found: 'u16'. But expected: 'i8', 'i16', 'i32', 'i64', 'i128'

error[E04003]: built-in operation not supported
   ┌─ tests/development/signed_ints/signed_int_neg_unsigned_literal.move:15:19
   │
15 │         let _x = -1u32;
   │                   ^^^^
   │                   │
   │                   Invalid argument to '-'
   │                   Found: 'u32'. But expected: 'i8', 'i16', 'i32', 'i64', 'i128'

error[E04003]: built-in operation not supported
   ┌─ tests/development/signed_ints/signed_int_neg_unsigned_literal.move:19:19
   │
19 │         let _x = -1u64;
   │                   ^^^^
   │                   │
   │                   Invalid argument to '-'
   │                   Found: 'u64'. But expected: 'i8', 'i16', 'i32', 'i64', 'i128'

error[E04003]: built-in operation not supported
   ┌─ tests/development/signed_ints/signed_int_neg_unsigned_literal.move:23:19
   │
23 │         let _x = -1u128;
   │                   ^^^^^
   │                   │
   │                   Invalid argument to '-'
   │                   Found: 'u128'. But expected: 'i8', 'i16', 'i32', 'i64', 'i128'

error[E04003]: built-in operation not supported
   ┌─ tests/development/signed_ints/signed_int_neg_unsigned_literal.move:27:19
   │
27 │         let _x = -1u256;
   │                   ^^^^^
   │                   │
   │                   Invalid argument to '-'
   │                   Found: 'u256'. But expected: 'i8', 'i16', 'i32', 'i64', 'i128'

error[E04003]: built-in operation not supported
   ┌─ tests/development/signed_ints/signed_int_neg_unsigned_literal.move:33:19
   │
32 │         let x: u64 = 5;
   │                --- Found: 'u64'. But expected: 'i8', 'i16', 'i32', 'i64', 'i128'
33 │         let _y = -x;
   │                   ^ Invalid argument to '-'
